Reboot du projet

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 	</head>
 	<body class="">
 		<header class="header show" style="top: 0px; opacity: 1;">
-			<h1><a href="./index.html" class="link_scroll">Boulangerie du Moulin | Estaimpuis</a></h1>
+			<a href="./index.html" class="link_scroll"><img class="logob" src="./image/logomoulin.png" alt="logo boulangerie du moulin"></a>
 			<nav>
 				<ul>
-					<li><a href="https://cafestudiobakery.tokyo/#concept" class="link_scroll">Notre Histoire</a></li>
+					<li><a href="index.html#concept" class="link_scroll">Notre Histoire</a></li>
 					<li><a href="https://cafestudiobakery.tokyo/#menu" class="link_scroll">Nos Pains</a></li>
 					<li><a href="https://cafestudiobakery.tokyo/#shopinfo" class="link_scroll">Nos Pâtisseries</a></li>
 					<li><a href="https://cafestudiobakery.tokyo/#shopinfo" class="link_scroll">Nos Wedding Cake</a></li>
@@ -62,7 +62,7 @@
 				<li><a href="tel:03-6281-9611">Phone</a></li>
 				<li><a href="https://goo.gl/maps/eV3gUNZiiAL2" target="_blank">Google Maps</a></li>
 			</ul>
-			<a href="https://cafestudiobakery.tokyo/#concept" class="btn_scroll link_scroll">Scroll down</a>
+			<a href="https://cafestudiobakery.tokyo/#concept" class="btn_scroll link_scroll">Faire défiler vers le bas</a>
 			<div class="wrap_bg slick-initialized slick-slider">
 				<div aria-live="polite" class="slick-list draggable">
 					<div class="slick-track" role="listbox" style="opacity: 1; width: 4557px;">
@@ -76,7 +76,7 @@
 		<div class="sec sec_concept" data-section-name="concept" style="height: 666px; opacity: 1;">
 			<div class="right">
 				<div class="wrap_cont">
-					<h2 class="ttl">Concept</h2>
+					<h2 class="ttl">Notre Histoire</h2>
 					<p>
 						                毎日お越しください！
 						<br>
