Ajout du Menu déroulant

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>メゾンカイザー</title>
+		<title>Boulangerie du Moulin | Estaimpuis</title>
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="伝統製法にこだわったブーランジェリー「MAISON KAYSER」を都内および全国に約３０店、焼き立てクロワッサンが楽しめるコーヒーショップ「&amp;COFFEE MAISON KAYSER」やパンとカジュアルな料理が楽しめるレストラン「MAISON KAYSER Table」、さらに２つのファクトリーもあわせ約40拠点を直接経営しています">
-		<meta name="keywords" content="メゾンカイザー,maisonkayser">
-		<link rel="shortcut icon" type="image/x-icon" href="https://maisonkayser.jp/favicon.ico">
+		<meta name="description" content="La Boulangerie du Moulin est votre espace gourmandise dans le hainaut. Venez gouter nos Pains, patisseries, viennoiseries et sandwichs maison>
+		<meta name="keywords content="Boulangerie du moulin | Estaimpuis | Hainaut">
+		<link rel="shortcut icon" type="image/x-icon" href="image/favicon.png">
 		<!--  CSS -->
 		<link rel="stylesheet" href="./css/reset.css">
 		<link rel="stylesheet" href="./css/base.css">
@@ -20,47 +20,32 @@
 		<link rel="stylesheet" href="./css/css">
 		<link rel="stylesheet" href="./css/leaf.css">
 		<!--  JS -->
-		<script type="text/javascript" async="" src="./js/analytics.js.téléchargement"></script>
-		<script src="./js/jquery.min.js.téléchargement"></script>
-		<script src="./js/jquery.bxslider.js.téléchargement"></script>
-		<script src="./js/common.js.téléchargement"></script>
-		<script src="./js/wow.js.téléchargement"></script>
-		<script src="./js/zdo_drawer_menu.js.téléchargement"></script>
-		<script src="./js/jquery.bgswitcher.js.téléchargement"></script>
-		<script src="./js/wp.js.téléchargement"></script>
+		<script type="text/javascript" async="" src="./js/analytics.js"></script>
+		<script src="./js/jquery.min.js"></script>
+		<script src="./js/jquery.bxslider.js"></script>
+		<script src="./js/common.js"></script>
+		<script src="./js/wow.js"></script>
+		<script src="./js/zdo_drawer_menu.js"></script>
+		<script src="./js/jquery.bgswitcher.js"></script>
+		<script src="./js/wp.js"></script>
 		<script>
 			  new WOW().init();
 		</script>
 		<script>
-			// jQueryは読み込み済み前提$(function(){
-				$('.btn_menu').click(function(){
-					  $('.sideNav').toggleClass('open');
-				});
+			$('.btn_menu').click(function(){
+    			$('.sideNav').toggleClass('open');
 			});
-		</script>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async="" src="./js"></script>
-		<script>
-			  window.dataLayer = window.dataLayer || [];
-			  function gtag(){
-				dataLayer.push(arguments);
-			}
-			  gtag('js', new Date());
-			  gtag('config', 'UA-167884014-1');
 		</script>
 	</head>
 	<body>
-		<!-- ↓wrapper ↓-->
 		<div id="wrapper" class="wow fadeIn zdo_drawer_menu" data-wow-duration="1.5s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 1.5s; animation-delay: 0.2s; animation-name: fadeIn;">
-			<!-- ↓headerArea ↓-->
 			<header>
 				<h1>
-					<a href="https://maisonkayser.jp/"><img src="./kayser boulangerie_files/logo.png" alt="maisonkayser"></a>
+					<a href="./index.html"><img src="image/logomoulin.png" alt="logo boulangerie du moulin"></a>
 				</h1>
 				<nav id="gNav">
 					<ul>
-						<li><a href="https://maisonkayser-netshop.jp/" target="_blank">ONLINE SHOP</a></li>
-						<li><a href="https://maisonkayser.jp/#brandsArea">LOCATION</a></li>
+						<li><a href="https://goo.gl/maps/2VhmGgKKvfMMezrR9"><img class="mapsize" src="image/map.png" alt="logo map">LOCALISATION</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -72,54 +57,44 @@
 			<nav class="zdo_drawer_nav_wrapper">
 				<ul class="zdo_drawer_nav">
 					<li>
-						BRAND
+						Notre boulangerie
 						<p class="subTxt">
-							<span>店舗＆ロケーション</span>
+							<span>Du Moulin</span>
 						</p>
 						<ul>
-							<li><a href="https://maisonkayser.jp/brands/bakery/">MAISON KAYSER</a></li>
-							<li><a href="https://maisonkayser.jp/brands/and_coffee/">＆COFFEE</a></li>
-							<li><a href="https://maisonkayser.jp/brands/table/">TABLE</a></li>
-							<li><a href="https://maisonkayser.jp/brands/pantra/">PanTra</a></li>
+							<li><a href="https://maisonkayser.jp/brands/bakery/">Accueil</a></li>
+							<li><a href="https://maisonkayser.jp/brands/and_coffee/">Nos Pains</a></li>
+							<li><a href="https://maisonkayser.jp/brands/table/">Nos Patisseries</a></li>
+							<li><a href="https://maisonkayser.jp/brands/pantra/">Nos Gâteaux</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="https://maisonkayser.jp/product/">
-							PRODUCT
+						<a href="./ingrdient.html">
+							PRODUITS
 							<p class="subTxt">
-								<span>商品</span>
+								<span>Ingrédients</span>
 							</p>
 						</a>
 					</li>
 					<li>
 						<a href="https://maisonkayser.jp/news/">
-							NEWS&amp;TOPICS
+							ACTUALITES
 							<p class="subTxt">
-								<span>最新情報</span>
+								<span>Suivez nos évènements</span>
 							</p>
 						</a>
 					</li>
 					<li>
-						 OUR STORY
+						 NOTRE HISTOIRE
 						<p class="subTxt">
-							<span><a href="https://maisonkayser.jp/story/introduction/">STORY 私たちの想い</a></span>
-							<br>
-							<span><a href="https://maisonkayser.jp/story/material/">REASON おいしさの理由</a></span>
+							<span><a href="https://maisonkayser.jp/story/introduction/">Il était une fois...</a></span>
 						</p>
 					</li>
 					<li>
-						<a href="https://maisonkayser.jp/company/about_us/">
-							COMPANY
-							<p class="subTxt">
-								<span>企業情報</span>
-							</p>
-						</a>
-					</li>
-					<li>
 						<a href="https://maisonkayser.jp/recruit/">
-							RECRUIT
+							Recrutement
 							<p class="subTxt">
-								<span>採用</span>
+								<span>Nos offres d'emplois</span>
 							</p>
 						</a>
 					</li>
@@ -127,15 +102,7 @@
 						<a href="https://maisonkayser.jp/contact/">
 							CONTACT
 							<p class="subTxt">
-								<span>お問い合わせ</span>
-							</p>
-						</a>
-					</li>
-					<li>
-						<a href="https://maisonkayser-netshop.jp/" target="_blank">
-							ONLINE SHOP
-							<p class="subTxt">
-								<span>オンラインショップ</span>
+								<span>Vous souhaitez nous contacter ?</span>
 							</p>
 						</a>
 					</li>
