--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 													</p>
 													<h4 class="ttl">大好評！メゾンカイザーの自家製ピザが美味しい理由！</h4>
 													<p class="txt"></p>
-													<span class="cat">MAISON KAYSER</span>
+													<span class="cat">Boulangerie Du MOULIN</span>
 												</a>
 											</li>
 											<li style="float: left; list-style: none; position: relative; width: 600px;" aria-hidden="true">
@@ -196,44 +196,31 @@
 							<div class="contents">
 								<ul class="panel is-show">
 									<li>
-										<span class="cat">MAISON KAYSER</span>
-										<a href="https://maisonkayser.jp/topics/1571/">
-											<p class="thumb">
-												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
-											</p>
-											<h4 class="ttl">メゾンカイザーシェフとパンシェルジュアーティストとの対談記事公開中！</h4>
-										</a>
-										<span class="date">2020.12.07</span>
+										<span class="cat">Boulangerie du Moulin</span>
+											<h4 class="ttl">Fermeture de notre boulangerie du 08 au 16 Novembre inclus pour cause de travaux. Merci de votre compréhension</h4>
+										<span class="date">06.11.2020</span>
 									</li>
 									<li>
-										<span class="cat">MAISON KAYSER</span>
-										<a href="https://maisonkayser.jp/topics/1563/">
-											<p class="thumb">
-												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
-											</p>
-											<h4 class="ttl">2020クリスマス商品ご予約受付中！</h4>
-										</a>
-										<span class="date">2020.11.24</span>
+										<span class="cat">Boulangerie du Moulin</span>
+											<h4 class="ttl">Rénovation de nos locaux terminés. Une nouvelle boulangerie vous attend !</h4>
+										<span class="date">14.11.2020</span>
 									</li>
 									<li>
-										<span class="cat">MAISON KAYSER</span>
-										<a href="https://maisonkayser.jp/topics/1557/">
-											<p class="thumb">
-												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
-											</p>
-											<h4 class="ttl">新型コロナウイルス感染拡大防止に伴う営業時間のお知らせ（11月9日更新）</h4>
+										<span class="cat">Boulangerie du Moulin</span>
+										<a href="https://www.facebook.com/1230548380344431/videos/398686924589043">
+											<h4 class="ttl">Venez découvrir notre décoration de Noël en boulangerie !</h4>
 										</a>
-										<span class="date">2020.11.09</span>
+										<span class="date">01.12.2020</span>
 									</li>
 									<li>
-										<span class="cat">MAISON KAYSER</span>
-										<a href="https://maisonkayser.jp/topics/1553/">
+										<span class="cat">Boulangeire du Moulin</span>
+										<a href="https://www.facebook.com/1230548380344431/videos/409664063547859">
 											<p class="thumb">
 												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
 											</p>
-											<h4 class="ttl">MAISON KAYSERコンピレーションアルバム発売</h4>
+											<h4 class="ttl">Nos mini-buchettes crème au beurre sont arrivés !</h4>
 										</a>
-										<span class="date">2020.11.01</span>
+										<span class="date">03.12.2020</span>
 									</li>
 								</ul>
 								<ul class="panel">
@@ -243,7 +230,7 @@
 											<p class="thumb">
 												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
 											</p>
-											<h4 class="ttl">メゾンカイザーシェフとパンシェルジュアーティストとの対談記事公開中！</h4>
+											<h4 class="ttl">kdnfezkjfezk kjezifjze kjeziezjf</h4>
 										</a>
 										<span class="date">2020.12.07</span>
 									</li>
@@ -253,9 +240,9 @@
 											<p class="thumb">
 												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
 											</p>
-											<h4 class="ttl">2020クリスマス商品ご予約受付中！</h4>
+											<h4 class="ttl">Nos Bûches sont arrivés ！</h4>
 										</a>
-										<span class="date">2020.11.24</span>
+										<span class="date">20.11.2020</span>
 									</li>
 									<li>
 										<span class="cat">MAISON KAYSER</span>
@@ -263,7 +250,7 @@
 											<p class="thumb">
 												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
 											</p>
-											<h4 class="ttl">新型コロナウイルス感染拡大防止に伴う営業時間のお知らせ（11月9日更新）</h4>
+											<h4 class="ttl">kdnfezkjfezk kjezifjze kjeziezjf</h4>
 										</a>
 										<span class="date">2020.11.09</span>
 									</li>
@@ -273,7 +260,7 @@
 											<p class="thumb">
 												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
 											</p>
-											<h4 class="ttl">MAISON KAYSERコンピレーションアルバム発売</h4>
+											<h4 class="ttl">kdnfezkjfezk kjezifjze kjeziezjf</h4>
 										</a>
 										<span class="date">2020.11.01</span>
 									</li>
