Lise en plage d'image page index.html

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 										<span class="date">01.12.2020</span>
 									</li>
 									<li>
-										<span class="cat">Boulangeire du Moulin</span>
+										<span class="cat">Boulangerie du Moulin</span>
 										<a href="https://www.facebook.com/1230548380344431/videos/409664063547859">
 											<p class="thumb">
 												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
@@ -251,7 +251,7 @@
 						<div class="uprBox mt100">
 							<div class="left">
 								<p class="img02 wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<img src="./kayser boulangerie_files/20191112kai2597.jpg" alt="">
+									<img src="./image/farine.jpg" alt="farine et beurre de qualité">
 								</p>
 							</div>
 							<div class="right">
@@ -278,7 +278,7 @@
 						<div class="uprBox">
 							<div class="left">
 								<p class="img02 wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<img src="./kayser boulangerie_files/20190320kayser9667_.jpg" alt="">
+									<img src="./image/cake.jpg" alt="exemple de gâteau personnalisé">
 								</p>
 							</div>
 							<div class="right">
@@ -304,31 +304,25 @@
 			<!-- ↑mainArea↑-->
 			<!-- ↓footerArea ↓-->
 			<footer class="wow fadeIn" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-				<div class="inner">
-					<div class="footMenuUpr">
-						<ul>
-							<li>
-								<dl>
-									<dt>
-										<h2>Retrouvez-nous sur :</h2>
-									</dt>
-									<dd>
-										<a href="https://maisonkayser.jp/brands/bakery/">Faebook</a>
-									</dd>
-									<dd>
-										<a href="https://maisonkayser.jp/brands/and_coffee/">Instagram</a>
-									</dd>
-									<dd>
-										<a href="https://maisonkayser.jp/brands/table/">TABLE</a>
-									</dd>
-									<dd>
-										<a href="https://maisonkayser.jp/brands/pantra/">PanTra</a>
-									</dd>
-								</dl>
-							</li>
-						</ul>
+				<div class=" cent inner">
+					<h3>Suivez-nous</h3>
+						<div class="socials">
+							<ul>
+								<li>
+									<a href="https://www.instagram.com/adrien.developpeur.web/" target="blank"><i class="fab fa-instagram"></i></a>
+								</li>
+								<li>
+									<a href="https://twitter.com/AdrienRibeiro17" target="blank"><i class="fab fa-twitter"></i></a>
+								</li>
+								<li>
+									<a href="https://www.linkedin.com/in/adrien-ribeiro-405271b4/" target="blank"><i class="fab fa-linkedin"></i></a>
+								</li>
+								<li>
+									<a href="https://github.com/arcas59" target="blank"><i class="fab fa-github"></i></a>
+								</li>
+							</ul>
+						</div>
 					</div>
-				</div>
 				<div class="copy">
 					Adrien Ribeiro | 2021 | Tous droits réservés.
 				</div>
