Ajout photo équipe

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 						<div class="uprBox">
 							<div class="left">
 								<p class="img02 wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<img src="./kayser boulangerie_files/story_img.png" alt="">
+									<img src="./image/team.jpg" alt="photo équipe boulangerie du moulin">
 								</p>
 							</div>
 							<div class="right">
