--- a/index.html
+++ b/index.html
@@ -309,16 +309,10 @@
 						<div class="socials">
 							<ul>
 								<li>
-									<a href="https://www.instagram.com/adrien.developpeur.web/" target="blank"><i class="fab fa-instagram"></i></a>
+									<a href="https://www.facebook.com/Nadia-boulangerie-du-moulin-1230548380344431" target="blank"><i class="fab fa-facebook"></i></a>
 								</li>
 								<li>
-									<a href="https://twitter.com/AdrienRibeiro17" target="blank"><i class="fab fa-twitter"></i></a>
-								</li>
-								<li>
-									<a href="https://www.linkedin.com/in/adrien-ribeiro-405271b4/" target="blank"><i class="fab fa-linkedin"></i></a>
-								</li>
-								<li>
-									<a href="https://github.com/arcas59" target="blank"><i class="fab fa-github"></i></a>
+									<a href="https://www.instagram.com/nadiaboulangeriedumoulin/" target="blank"><i class="fab fa-instagram"></i></a>
 								</li>
 							</ul>
 						</div>
