--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 						</p>
 					</li>
 					<li class="space">
-						<a href="./nospains.html">
+						<a href="https://maisonkayser.jp/news/">
 							PAINS
 							<p class="subTxt">
 								<span>Découvrez nos pains authentique</span>
@@ -73,7 +73,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="./patisseries.html">
+						<a href="https://maisonkayser.jp/news/">
 							PÂTISSERIES
 							<p class="subTxt">
 								<span>Trouver votre gourmandises</span>
@@ -81,7 +81,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="./nosgateaux.html">
+						<a href="https://maisonkayser.jp/news/">
 							GÂTEAUX
 							<p class="subTxt">
 								<span>Nos créations</span>
@@ -120,9 +120,80 @@
 			<div id="main">
 				<section id="newsArea">
 					<div class="inner">
+						<div class="uprBox">
+							<div class="secTtl wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.2s; animation-name: fadeInDown;">
+								<h2>Actualités<span>&amp;</span>Sujets</h2>
+								<h3>Découvrez nos nouveautés</h3>
+							</div>
+							<div class="featureNews wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.2s; animation-name: fadeInDown;">
+								<div class="bx-wrapper" style="max-width: 100%;">
+									<div class="bx-viewport" aria-live="polite" style="width: 100%; overflow: hidden; position: relative; height: 344px;">
+										<ul class="slider" style="width: 2215%; position: relative; transition-duration: 0s; transform: translate3d(-1200px, 0px, 0px);">
+											<li style="float: left; list-style: none; position: relative; width: 600px;" class="bx-clone" aria-hidden="true">
+												<a href="https://maisonkayser.jp/topics/1375/">
+													<p class="thumb">
+														<img src="./kayser boulangerie_files/c33ea6f8ce9acbb7a1af5a13afe81001-scaled-e1590600356740.jpg" alt="">
+													</p>
+													<h4 class="ttl">大好評！メゾンカイザーの自家製ピザが美味しい理由！</h4>
+													<p class="txt"></p>
+													<span class="cat">Boulangerie Du MOULIN</span>
+												</a>
+											</li>
+											<li style="float: left; list-style: none; position: relative; width: 600px;" aria-hidden="true">
+												<a href="https://maisonkayser.jp/topics/1405/">
+													<p class="thumb">
+														<img src="./kayser boulangerie_files/thumbnail_information.jpg" alt="">
+													</p>
+													<h4 class="ttl">公式Instagramにて最新情報配信中</h4>
+													<p class="txt"></p>
+													<span class="cat">MAISON KAYSER</span>
+												</a>
+											</li>
+											<li style="float: left; list-style: none; position: relative; width: 600px;" aria-hidden="false">
+												<a href="https://maisonkayser.jp/topics/1375/">
+													<p class="thumb">
+														<img src="./kayser boulangerie_files/c33ea6f8ce9acbb7a1af5a13afe81001-scaled-e1590600356740.jpg" alt="">
+													</p>
+													<h4 class="ttl">大好評！メゾンカイザーの自家製ピザが美味しい理由！</h4>
+													<p class="txt"></p>
+													<span class="cat">MAISON KAYSER</span>
+												</a>
+											</li>
+											<li style="float: left; list-style: none; position: relative; width: 600px;" class="bx-clone" aria-hidden="true">
+												<a href="https://maisonkayser.jp/topics/1405/">
+													<p class="thumb">
+														<img src="./kayser boulangerie_files/thumbnail_information.jpg" alt="">
+													</p>
+													<h4 class="ttl">公式Instagramにて最新情報配信中</h4>
+													<p class="txt"></p>
+													<span class="cat">MAISON KAYSER</span>
+												</a>
+											</li>
+										</ul>
+									</div>
+									<div class="bx-controls bx-has-controls-direction bx-has-pager">
+										<div class="bx-controls-direction">
+											<a class="bx-prev" href="https://maisonkayser.jp/">Prev</a>
+											<a class="bx-next" href="https://maisonkayser.jp/">Next</a>
+										</div>
+										<div class="bx-pager bx-default-pager">
+											<div class="bx-pager-item">
+												<a href="https://maisonkayser.jp/" data-slide-index="0" class="bx-pager-link">1</a>
+											</div>
+											<div class="bx-pager-item">
+												<a href="https://maisonkayser.jp/" data-slide-index="1" class="bx-pager-link active">2</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="moreBtn wow fadeInDown spHide" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.2s; animation-name: fadeInDown;">
+								<a href="https://maisonkayser.jp/news/">一覧／ALL</a>
+							</div>
+						</div>
 						<div class="btm wow fadeIn" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
 							<ul class="catGroup">
-								<li class="tab is-active">Actualités</li>
+								<li class="tab is-active">最新情報</li>
 								<li class="tab">Boulangerie du Moulin</li>
 							</ul>
 							<div class="contents">
@@ -148,6 +219,7 @@
 										<span class="cat">Boulangerie du Moulin</span>
 										<a href="https://www.facebook.com/1230548380344431/videos/409664063547859">
 											<p class="thumb">
+												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
 											</p>
 											<h4 class="ttl">Nos mini-buchettes crème au beurre sont arrivés !</h4>
 										</a>
@@ -225,7 +297,7 @@
 									Une part de magie dans vos gâteaux qui sublimera vos moments.
 								</p>
 								<div class="moreBtn wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<a id="lip" href="./nosgateaux.html">Voir nos gâteaux</a>
+									<a id="lip" href="https://maisonkayser.jp/product/">Voir nos gâteaux</a>
 								</div>
 							</div>
 						</div>
