Finition page contact.html

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 						</p>
 					</li>
 					<li class="space">
-						<a href="https://maisonkayser.jp/news/">
+						<a href="./nospains.html">
 							PAINS
 							<p class="subTxt">
 								<span>Découvrez nos pains authentique</span>
@@ -73,7 +73,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="https://maisonkayser.jp/news/">
+						<a href="./patisseries.html">
 							PÂTISSERIES
 							<p class="subTxt">
 								<span>Trouver votre gourmandises</span>
@@ -81,7 +81,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="https://maisonkayser.jp/news/">
+						<a href="./nosgateaux.html">
 							GÂTEAUX
 							<p class="subTxt">
 								<span>Nos créations</span>
@@ -104,208 +104,27 @@
 					</li>
 				</ul>
 			</nav>
-			<div class="topMovie">
-				<div class="logoacc">
-					<img src="./image/logoacc.svg" alt="logo accueil boulangerie format svg">
-				</div>
-				<div class="slider-b slick-track slick-slider">
-					<img src="image/boulangerie1.jpg" alt="photo boulangerie 1" style="width: 490px; position: relative; left: 0px; top: 0px; z-index: 998;" />
-					<img src="image/boulangerie2.jpg" alt="photo boulangerie 2" style="width: 490px; position: relative; left: -490px; top: 0px; z-index: 1000;" />
-					<img src="image/boulangerie3.jpg" alt="photo boulangerie 3" style="width: 490px; position: relative; left: -980px; top: 0px; z-index: 998;" />
-				</div>
-				<p class="down">
-					<a href="index.html#storyArea"><img src="./image/fleche.png" alt="fleche vers le bas"></a>
-				</p>
-			</div>
-			<div id="main">
-				<section id="newsArea">
-					<div class="inner">
-						<div class="uprBox">
-							<div class="secTtl wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.2s; animation-name: fadeInDown;">
-								<h2>Actualités<span>&amp;</span>Sujets</h2>
-								<h3>Découvrez nos nouveautés</h3>
-							</div>
-							<div class="featureNews wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.2s; animation-name: fadeInDown;">
-								<div class="bx-wrapper" style="max-width: 100%;">
-									<div class="bx-viewport" aria-live="polite" style="width: 100%; overflow: hidden; position: relative; height: 344px;">
-										<ul class="slider" style="width: 2215%; position: relative; transition-duration: 0s; transform: translate3d(-1200px, 0px, 0px);">
-											<li style="float: left; list-style: none; position: relative; width: 600px;" class="bx-clone" aria-hidden="true">
-												<a href="https://maisonkayser.jp/topics/1375/">
-													<p class="thumb">
-														<img src="./kayser boulangerie_files/c33ea6f8ce9acbb7a1af5a13afe81001-scaled-e1590600356740.jpg" alt="">
-													</p>
-													<h4 class="ttl">大好評！メゾンカイザーの自家製ピザが美味しい理由！</h4>
-													<p class="txt"></p>
-													<span class="cat">Boulangerie Du MOULIN</span>
-												</a>
-											</li>
-											<li style="float: left; list-style: none; position: relative; width: 600px;" aria-hidden="true">
-												<a href="https://maisonkayser.jp/topics/1405/">
-													<p class="thumb">
-														<img src="./kayser boulangerie_files/thumbnail_information.jpg" alt="">
-													</p>
-													<h4 class="ttl">公式Instagramにて最新情報配信中</h4>
-													<p class="txt"></p>
-													<span class="cat">MAISON KAYSER</span>
-												</a>
-											</li>
-											<li style="float: left; list-style: none; position: relative; width: 600px;" aria-hidden="false">
-												<a href="https://maisonkayser.jp/topics/1375/">
-													<p class="thumb">
-														<img src="./kayser boulangerie_files/c33ea6f8ce9acbb7a1af5a13afe81001-scaled-e1590600356740.jpg" alt="">
-													</p>
-													<h4 class="ttl">大好評！メゾンカイザーの自家製ピザが美味しい理由！</h4>
-													<p class="txt"></p>
-													<span class="cat">MAISON KAYSER</span>
-												</a>
-											</li>
-											<li style="float: left; list-style: none; position: relative; width: 600px;" class="bx-clone" aria-hidden="true">
-												<a href="https://maisonkayser.jp/topics/1405/">
-													<p class="thumb">
-														<img src="./kayser boulangerie_files/thumbnail_information.jpg" alt="">
-													</p>
-													<h4 class="ttl">公式Instagramにて最新情報配信中</h4>
-													<p class="txt"></p>
-													<span class="cat">MAISON KAYSER</span>
-												</a>
-											</li>
-										</ul>
-									</div>
-									<div class="bx-controls bx-has-controls-direction bx-has-pager">
-										<div class="bx-controls-direction">
-											<a class="bx-prev" href="https://maisonkayser.jp/">Prev</a>
-											<a class="bx-next" href="https://maisonkayser.jp/">Next</a>
-										</div>
-										<div class="bx-pager bx-default-pager">
-											<div class="bx-pager-item">
-												<a href="https://maisonkayser.jp/" data-slide-index="0" class="bx-pager-link">1</a>
-											</div>
-											<div class="bx-pager-item">
-												<a href="https://maisonkayser.jp/" data-slide-index="1" class="bx-pager-link active">2</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="moreBtn wow fadeInDown spHide" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.2s; animation-name: fadeInDown;">
-								<a href="https://maisonkayser.jp/news/">一覧／ALL</a>
-							</div>
-						</div>
-						<div class="btm wow fadeIn" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-							<ul class="catGroup">
-								<li class="tab is-active">最新情報</li>
-								<li class="tab">Boulangerie du Moulin</li>
-							</ul>
-							<div class="contents">
-								<ul class="panel is-show">
-									<li>
-										<span class="cat">Boulangerie du Moulin</span>
-											<h4 class="ttl">Fermeture de notre boulangerie du 08 au 16 Novembre inclus pour cause de travaux. Merci de votre compréhension</h4>
-										<span class="date">06.11.2020</span>
-									</li>
-									<li>
-										<span class="cat">Boulangerie du Moulin</span>
-											<h4 class="ttl">Rénovation de nos locaux terminés. Une nouvelle boulangerie vous attend !</h4>
-										<span class="date">14.11.2020</span>
-									</li>
-									<li>
-										<span class="cat">Boulangerie du Moulin</span>
-										<a href="https://www.facebook.com/1230548380344431/videos/398686924589043">
-											<h4 class="ttl">Venez découvrir notre décoration de Noël en boulangerie !</h4>
-										</a>
-										<span class="date">01.12.2020</span>
-									</li>
-									<li>
-										<span class="cat">Boulangerie du Moulin</span>
-										<a href="https://www.facebook.com/1230548380344431/videos/409664063547859">
-											<p class="thumb">
-												<img src="./kayser boulangerie_files/thumbnail_information(1).jpg" alt="">
-											</p>
-											<h4 class="ttl">Nos mini-buchettes crème au beurre sont arrivés !</h4>
-										</a>
-										<span class="date">03.12.2020</span>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</section>
-				<section id="storyArea">
-					<div class="inner">
-						<h2 class="wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">Notre Histoire</h2>
-						<div class="uprBox">
-							<div class="left">
-								<p class="img02 wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<img src="./image/team.jpg" alt="photo équipe boulangerie du moulin">
-								</p>
-							</div>
-							<div class="right">
-								<div class="secTtl wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<h3>Une passion</h3>
-									<h4>Notre signature</h4>
-								</div>
-								<p class="txt wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									Depuis 2013, votre boulangerie du Moulin met tous son savoir-faire et sa passion pour vous donner de la joie gustative.
-									<br>
-									Nous prenons plaisir à vous donner du plaisir.
-								</p>
-							</div>
-						</div>
-						<div class="uprBox mt100">
-							<div class="left">
-								<p class="img02 wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<img src="./image/farine.jpg" alt="farine et beurre de qualité">
-								</p>
-							</div>
-							<div class="right">
-								<div class="secTtl wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<h3>Des produits noble</h3>
-									<h4>Une évidence pour nous</h4>
-								</div>
-								<p class="txt wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									Nous utilisons de la Farine moulue et du beurre noble pour nos créations.
-									<br>
-									Nous faisons chaque jour un délicieux pain en utilisant de la levure naturelle, selon notre méthode traditionnelle.
-									<br>
-									<br>
-									Cela vous garantit un pain savoureux et délicieux chaque jours.
-									<br>
-									Nous travaillons avec la boulangerie Mortagne afin d'élaborer nos meilleurs produits.
-								</p>
-							</div>
-						</div>
-					</div>
-				</section>
-				<section id="productsArea">
-					<div class="inner">
-						<div class="uprBox">
-							<div class="left">
-								<p class="img02 wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<img src="./image/cake.jpg" alt="exemple de gâteau personnalisé">
-								</p>
-							</div>
-							<div class="right">
-								<div class="secTtl wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<h2>Des gâteaux uniques</h2>
-									<h3>Notre imagination est sans limite</h3>
-								</div>
-								<p class="txt wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									Nous créons vos gâteaux de Mariage ou d'Anniversaires sur demande.
-									<br>
-									De cette personnalisation en résultera un gâteau unique pour un moment unique avec vos convives.
-									<br>
-									Une part de magie dans vos gâteaux qui sublimera vos moments.
-								</p>
-								<div class="moreBtn wow fadeInDown" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-									<a id="lip" href="https://maisonkayser.jp/product/">Voir nos gâteaux</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
-			</div>
-			<!-- ↑mainArea↑-->
-			<!-- ↓footerArea ↓-->
+            <div class="no_bg" id="leafVisual">
+                <div class="box">
+                <div class="inner">
+                    <h1 class="ttl">CONTACT
+                    <span class="ja">Besoin d'une information ?</span></h1>
+                </div>
+                </div>
+            </div>
+            <div id="main">
+                <section class="section_type01 mb050">
+                    <h2 class="h2_type09">Téléphone</h2>
+                    <ul class="list_contact">
+                        <li class="tel" style="margin-right:0;"><span>(+32) 056 55 81 61</span></li>
+                    </ul>
+                </section> <section class="section_type01 mb050">
+                <h2 class="h2_type09">Email</h2>
+                <ul class="list_contact">
+                    <li class="form"><a href="https://maisonkayser.jp/contact/media_form/"><span>contact@laboulangeriedumoulin.be</span></a></li>
+                </ul>
+                </section>
+            </div>
 			<footer class="wow fadeIn" data-wow-duration="1.0s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
 				<div class=" cent inner">
 					<h3>Suivez-nous</h3>
