--- a/nospains.html
+++ b/nospains.html
@@ -59,10 +59,12 @@
 			<nav class="zdo_drawer_nav_wrapper">
 				<ul class="zdo_drawer_nav">
 					<li>
-						BOULANGERIE
-						<p class="subTxt">
-							<span>Du Moulin</span>
-						</p>
+                        <a href="./index.html">
+                            BOULANGERIE
+                            <p class="subTxt">
+                                <span>Du Moulin</span>
+                            </p>
+                        </a>
 					</li>
 					<li class="space">
 						<a href="./nospains.html">
@@ -89,10 +91,12 @@
 						</a>
 					</li>
 					<li>
-						 HISTOIRE
-						<p class="subTxt">
-							<span><a href="index.html#storyArea">Il était une fois...</a></span>
-						</p>
+                        <a href="index.html#storyArea">
+                            HISTOIRE
+                            <p class="subTxt">
+                                <span>Il était une fois...
+                            </p>
+                        </a>
 					</li>
 					<li>
 						<a href="./contact.html">
@@ -113,14 +117,40 @@
                 </div>
             </div>
             <div id="main">
-                <section class="">
-                    <div>
-                        <img src="./image/pain/pain1.jpg" alt="photo pain 1">
-                        <img src="./image/pain/pain2.jpg" alt="photo pain 2">
-                        <img src="./image/pain/pain3.jpg" alt="photo pain 3">
-                        <img src="./image/pain/pain4.jpg" alt="photo pain 4">
-                        <img src="./image/pain/pain5.jpg" alt="photo pain 5">
-                        <img src="./image/pain/pain6.jpg" alt="photo pain 6">
+                <section>
+                    <div class="flex">
+                        <div class="sizeboxpain">
+                            <img class="sizepain" src="./image/pain/pain1.jpg" alt="photo pain 1">
+                            <p>Pain de campagne</p>
+                        </div>
+                        <div class="sizeboxpain">
+                            <img class="sizepain" src="./image/pain/pain2.jpg" alt="photo pain 2">
+                            <p>Brioche du moulin</p>
+                        </div>
+                        <div class="sizeboxpain">
+                            <img class="sizepain" src="./image/pain/pain3.jpg" alt="photo pain 3">
+                            <p>Pain tradition</p>
+                        </div>
+                        <div class="sizeboxpain">
+                            <img class="sizepain" src="./image/pain/pain4.jpg" alt="photo pain 4">
+                            <p>Pain multi-céréales</p>
+                        </div>
+                        <div class="sizeboxpain">
+                            <img class="sizepain" src="./image/pain/pain5.jpg" alt="photo pain 5">
+                            <p>Pain vienois</p>
+                        </div>
+                        <div class="sizeboxpain">
+                            <img class="sizepain" src="./image/pain/pain6.jpg" alt="photo pain 6">
+                            <p>Baguette tradition</p>
+                        </div>
+                        <div class="sizeboxpain">
+                            <img class="sizepain" src="./image/pain/pain7.jpg" alt="photo pain 7">
+                            <p>Pain scandinave</p>
+                        </div>
+                        <div class="sizeboxpain">
+                            <img class="sizepain" src="./image/pain/pain8.jpg" alt="photo pain 8">
+                            <p>Pain venici</p>
+                        </div>
                     </div>  
                 </section>
             </div>
