--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
 			<nav class="zdo_drawer_nav_wrapper">
 				<ul class="zdo_drawer_nav">
 					<li>
-						BOULANGERIE
-						<p class="subTxt">
-							<span>Du Moulin</span>
-						</p>
+                        <a href="./index.html">
+                            BOULANGERIE
+                            <p class="subTxt">
+                                <span>Du Moulin</span>
+                            </p>
+                        </a>
 					</li>
 					<li class="space">
 						<a href="./nospains.html">
@@ -89,10 +91,12 @@
 						</a>
 					</li>
 					<li>
-						 HISTOIRE
-						<p class="subTxt">
-							<span><a href="index.html#storyArea">Il était une fois...</a></span>
-						</p>
+                        <a href="index.html#storyArea">
+                            HISTOIRE
+                            <p class="subTxt">
+                                <span>Il était une fois...
+                            </p>
+                        </a>
 					</li>
 					<li>
 						<a href="./contact.html">
