--- a/contact.html
+++ b/contact.html
@@ -92,9 +92,9 @@
 					</li>
 					<li>
                         <a href="index.html#storyArea">
-                            HISTOIRE
+                            ATELIER GÂTEAU
                             <p class="subTxt">
-                                <span>Il était une fois...
+                                <span>Nos ateliers créations pour enfants
                             </p>
                         </a>
 					</li>
