Ajouts photos page atelier.html

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 						</a>
 					</li>
 					<li>
-                        <a href="index.html#storyArea">
+                        <a href="./atelier.html">
                             ATELIER GÂTEAU
                             <p class="subTxt">
                                 <span>Nos ateliers créations pour enfants
