--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 						</a>
 					</li>
 					<li>
-                        <a href="index.html#storyArea">
-                            HISTOIRE
+                        <a href="./atelier.html">
+                            ATELIER GÂTEAU
                             <p class="subTxt">
-                                <span>Il était une fois...
+                                <span>Nos ateliers créations pour enfants
                             </p>
                         </a>
 					</li>
