--- a/patisseries.html
+++ b/patisseries.html
@@ -56,7 +56,7 @@
 				<span class="zdo_drawer_bar zdo_drawer_bar2"></span>
 				<span class="zdo_drawer_bar zdo_drawer_bar3"></span>
 			</button>
-			<nav class="zdo_drawer_nav_wrapper">
+            <nav class="zdo_drawer_nav_wrapper">
 				<ul class="zdo_drawer_nav">
 					<li>
                         <a href="./index.html">
@@ -91,10 +91,10 @@
 						</a>
 					</li>
 					<li>
-                        <a href="index.html#storyArea">
-                            HISTOIRE
+                        <a href="./atelier.html">
+                            ATELIER GÂTEAU
                             <p class="subTxt">
-                                <span>Il était une fois...
+                                <span>Nos ateliers créations pour enfants
                             </p>
                         </a>
 					</li>
