--- a/atelier.html
+++ b/atelier.html
@@ -119,7 +119,7 @@
             <div id="main">
                 <section>
                     <h1 class="titregat">Faîtes découvrir à vos enfants la passion de la patisserie</h1>
-                    <h2 class="titregat2">Un souvenir inoubliable et qui se mange !</h2>
+                    <h2 class="titregat2">Un souvenir inoubliable, délicieux et unique !</h2>
                 </section>
                 <section>
                     <div class="flex">
