ajout header opacity

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
 	<body>
 		<div id="wrapper" class="wow fadeIn zdo_drawer_menu" data-wow-duration="1.5s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 1.5s; animation-delay: 0.2s; animation-name: fadeIn;">
 			<header>
-				<h1>
+				<h1 class="opa">
 					<a href="./index.html"><img src="image/logomoulin.png" alt="logo boulangerie du moulin"></a>
 				</h1>
-				<nav id="gNav">
+				<nav id="gNav" class="opa">
 					<ul>
 						<li><a href="https://goo.gl/maps/2VhmGgKKvfMMezrR9"><img class="mapsize" src="image/map.png" alt="logo map">OÙ  NOUS TROUVER ?</a></li>
 					</ul>
 				</nav>
 			</header>
-			<button type="button" class="zdo_drawer_button">
+			<button type="button" class="zdo_drawer_button opa">
 				<span class="zdo_drawer_bar zdo_drawer_bar1"></span>
 				<span class="zdo_drawer_bar zdo_drawer_bar2"></span>
 				<span class="zdo_drawer_bar zdo_drawer_bar3"></span>
 			</button>
-			<nav class="zdo_drawer_nav_wrapper">
+			<nav class="zdo_drawer_nav_wrapper opa">
 				<ul class="zdo_drawer_nav">
 					<li>
                         <a href="./index.html">
