Finalisation background responsive

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<div class="logoacc">
 					<img src="./image/logoacc.svg" alt="logo accueil boulangerie format svg">
 				</div>
-				<div class="slider-b slick-track slick-slider">
+				<div id="fixo" class="slider-b slick-track slick-slider fixo">
 					<img src="image/boulangerie1.jpg" alt="photo boulangerie 1" style="width: 490px; position: relative; left: 0px; top: 0px; z-index: 998;" />
 					<img src="image/boulangerie2.jpg" alt="photo boulangerie 2" style="width: 490px; position: relative; left: -490px; top: 0px; z-index: 1000;" />
 					<img src="image/boulangerie3.jpg" alt="photo boulangerie 3" style="width: 490px; position: relative; left: -980px; top: 0px; z-index: 998;" />
