Maj adresse mail + responsive design correction bug

--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
                 </section> <section class="section_type01 mb050">
                 <h2 class="h2_type09">Email</h2>
                 <ul class="list_contact">
-                    <li class="form"><a href="https://maisonkayser.jp/contact/media_form/"><span>contact@laboulangeriedumoulin.be</span></a></li>
+                    <li class="form"><a href="mailto:contact@laboulangeriedumoulin.be"><span>contact@laboulangeriedumoulin.be</span></a></li>
                 </ul>
                 </section>
             </div>
